tree-sitter-idl/grammar.js
  scoped_name: $ =>
    choice(
      $.identifier,
      seq('::', $.identifier),
      seq($.scoped_name, '::', $.identifier),
    ),
  string_type: $ =>
    seq(
      choice('string', 'wstring'),
      optional(seq('<', $.positive_int_const, '>')),
    ),
  type_spec: $ =>
    choice(
      $.simple_type_spec,
      $.template_type_spec,
      // 7.4.14
    ),
  simple_type_spec: $ => prec.left(1, choice($.base_type_spec, $.scoped_name)),
  base_type_spec: $ =>
    choice(
      $.integer_type,
      $.floating_pt_type,
      $.char_type,
      $.boolean_type,
      $.octet_type,
      $.any_type,
      // IDL 7.4.2
    ),
  any_type: _ => 'any',
  fixed_pt_type: $ =>
    seq('fixed', '<', $.positive_int_const, ',', $.positive_int_const, '>'),
  template_type_spec: $ =>
    choice(
      $.sequence_type,
      $.string_type,
      $.fixed_pt_type,
      $.map_type,
      // idl 7.4.13
    ),
  sequence_type: $ =>
    seq(
      'sequence',
      '<',
      choice($.type_spec, optional(seq(',', $.positive_int_const))),
      '>',
    ),
  positive_int_const: $ => $.const_expr,
  const_expr: $ => $.or_expr,
  or_expr: $ =>
    prec.left(
      PREC.INCLUSIVE_OR,
      choice($.xor_expr, seq($.or_expr, '|', $.xor_expr)),
    ),
  xor_expr: $ =>
    prec.left(
      PREC.EXCLUSIVE_OR,
      choice($.and_expr, seq($.xor_expr, '^', $.and_expr)),
    ),
  and_expr: $ =>
    prec.left(
      PREC.BITWISE_AND,
      choice($.shift_expr, seq($.and_expr, '$', $.shift_expr)),
    ),
  shift_expr: $ =>
    prec.left(
      PREC.SHIFT,
      choice(
        $.add_expr,
        seq($.shift_expr, '>>', $.add_expr),
        seq($.shift_expr, '<<', $.add_expr),
      ),
    ),
  add_expr: $ =>
    prec.left(
      PREC.ADD,
      choice(
        $.mult_expr,
        seq($.add_expr, '+', $.mult_expr),
        seq($.add_expr, '-', $.mult_expr),
      ),
    ),
  mult_expr: $ =>
    prec.left(
      PREC.MULTIPLY,
      choice(
        $.unary_expr,
        seq($.mult_expr, '*', $.unary_expr),
        seq($.mult_expr, '/', $.unary_expr),
        seq($.mult_expr, '%', $.unary_expr),
      ),
    ),
  unary_expr: $ =>
    choice(seq($.unary_operator, $.primary_expr), $.primary_expr),
  literal: $ =>
    choice(
      $.number_literal,
      $.char_literal,
      $.string_literal,
      $.boolean_literal,
    ),
  string_literal: $ => seq(optional('L'), '"', /\w+/, '"'),
  number_literal: _ => {
    const separator = "'"
    const hex = /[0-9a-fA-F]/
    const decimal = /[0-9]/
    const hexDigits = seq(repeat1(hex), repeat(seq(separator, repeat1(hex))))
    const decimalDigits = seq(
      repeat1(decimal),
      repeat(seq(separator, repeat1(decimal))),
    )
    return token(
      seq(
        optional(/[-\+]/),
        optional(choice(/0[xX]/, /0[bB]/)),
        choice(
          seq(
            choice(
              decimalDigits,
              seq(/0[bB]/, decimalDigits),
              seq(/0[xX]/, hexDigits),
            ),
            optional(seq('.', optional(hexDigits))),
          ),
          seq('.', decimalDigits),
        ),
        optional(seq(/[eEpP]/, optional(seq(optional(/[-\+]/), hexDigits)))),
        /[uUlLwWfFbBdD]*/,
      ),
    )
  },
}
var literal_default = {
  rules: rules3,
}

// ../common/directive.ts
var rules4 = {
  except_dcl: $ => seq('exception', $.identifier, '{', repeat($.member), '}'),
  annotation_appl: $ =>
    prec.left(
      1,
      seq(
        '@',
        $.scoped_name,
        optional(seq('(', $.annotation_appl_params, ')')),
      ),
    ),
  annotation_appl_params: $ =>
    choice($.const_expr, commaSep1($.annotation_appl_param)),
  annotation_appl_param: $ => seq($.identifier, '=', $.const_expr),
}
var annotation_default = {
  rules: rules7,
}

// ../common/template.ts
var rules8 = {
  simple_declarator: $ => $.identifier,
  declarator: $ =>
    choice(
      $.simple_declarator,
      $.array_declarator,
      // 7.4.14
    ),
  declarators: $ => commaSep1($.declarator),
  array_declarator: $ => seq($.identifier, repeat1($.fixed_array_size)),
  fixed_array_size: $ => seq('[', $.positive_int_const, ']'),
}
var typedef_dcl_default = {
  rules: rules10,
}

// ../common/union_dcl.ts
var rules11 = {
    specification: $ => seq(repeat($.preproc_call), repeat($._definition)),
    ...base_types_default.rules,
    ...expr_default.rules,
    ...literal_default.rules,
    ...directive_default.rules,
    ...rpc_default.rules,
    ...bitmask_default.rules,
    ...annotation_default.rules,
    ...template_default.rules,
    ...value_type_default.rules,
    ...typedef_dcl_default.rules,
    ...union_dcl_default.rules,
    _definition: $ =>
      choice(
        $.predefine,
        seq(
          choice(
            $.module_dcl,
            $.type_dcl,
            $.const_dcl,
            $.typedef_dcl,
            $.except_dcl,
            $.interface_dcl,
            $.annotation_dcl,
            // 7.4.15
            $.template_module_dcl,
            // idl 7.4.12
            $.template_module_inst,
            // idl 7.4.12
            $.value_dcl,
            // idl 7.4.5
          ),
          ';',
        ),
      ),
    struct_def: $ =>
      prec.left(
        2,
        seq(
          repeat($.annotation_appl),
          'struct',
          $.identifier,
          optional(seq(':', field('parent', $.scoped_name))),
          '{',
          repeat($.member),
          '}',
        ),
      ),
    member: $ =>
      seq(
        repeat($.annotation_appl),
        field('type', $.type_spec),
        field('identifier', $.declarators),
        optional($.default),
        ';',
      ),
    identifier: _ => /\w[\w\d_]*/,
    // 7.2.3
    comment: _ =>
      token(
        choice(
          seq('//', /(\\+(.|\r?\n)|[^\\\n])*/),
          seq('/*', /[^*]*\*+([^/*][^*]*\*+)*/, '/'),
        ),
      ),
  },
})
